# chatpilot

./: .gitignore  Readme.md  main.py  pyproject.toml
flows/: archive.excalidraw  ver1_flow.excalidraw  ver2_flow.excalidraw
model/: histroy.py  pyproject.toml
models/api/: fast_api.py
models/history/: query_history.py
models/scrape/: db_entry.py  query.py  selenium_scrapper.py
models/scrape/database/: chroma.sqlite3
models/scrape/outputs/: selenium_output.txt  selenium_output[images].csv  selenium_output[routes].csv
models/scrape/preprocess/: route_processing.py  text_processing.py
models/scrapper_models/: db_entry.py
models/scrapper_models/outputs/: selenium_output.txt  selenium_output[images].csv  selenium_output[routes].csv
outputs/: selenium_output.txt  selenium_output[images].csv  selenium_output[routes].csv
scrape/: selenium_scrapper.py  similarity_search.py
scrape/preprocess/: text_processing.py
