[tool.poetry]
name = "chatpilot"
version = "0.1.0"
description = ""
authors = ["leocodeio <basicleo@787>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
bs4 = "^0.0.2"
selenium = "^4.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
