[tool.poetry]
name = "chatpilot"
version = "0.1.0"
description = ""
authors = ["leocodeio <basicleo@787>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
chromadb = "^0.5.7"
requests = "^2.32.3"
bs4 = "^0.0.2"
selenium = "^4.24.0"
pandas = "^2.2.2"
setuptools = "^75.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
